// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize bodybox block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "test",
          },
        ],
        "object": "block",
        "type": "bodybox",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserialize em mark that contains embed footnote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "italic",
              },
            ],
            "object": "text",
            "text": "NDLA",
          },
          Object {
            "data": Object {
              "authors": Array [
                "Peter, Christian",
              ],
              "edition": "",
              "publisher": "Knowit",
              "resource": "footnote",
              "title": "Javascript.",
              "type": "Programming",
              "year": "2018",
            },
            "nodes": Array [
              Object {
                "marks": Array [
                  Object {
                    "data": Object {},
                    "object": "mark",
                    "type": "italic",
                  },
                ],
                "object": "text",
                "text": "#",
              },
            ],
            "object": "inline",
            "type": "footnote",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "italic",
              },
            ],
            "object": "text",
            "text": " ",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserialize footnote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "authors": Array [
                "Jony Ive",
              ],
              "edition": "2",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "Apple Watch",
              "type": "",
              "year": "2015",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "#",
              },
            ],
            "object": "inline",
            "type": "footnote",
          },
          Object {
            "data": Object {
              "authors": Array [
                "Steve Jobs",
                "Jony Ive",
              ],
              "edition": "1",
              "publisher": "Apple",
              "resource": "footnote",
              "title": "iPhone",
              "type": "",
              "year": "2007",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "#",
              },
            ],
            "object": "inline",
            "type": "footnote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a br 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "
",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a normal div block 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "A paragraph",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "div",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a quote 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "This quote should be both smart and wise",
          },
        ],
        "object": "block",
        "type": "quote",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a section 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Paragraph text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "section",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing a span with attributes 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "lang": "en",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Hyper Text Markup Language",
              },
            ],
            "object": "inline",
            "type": "span",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing alphabetical list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "type": "letters",
        },
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 1",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 2",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 3",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "letter-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading becomes heading-two except heading-three 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "heading 1",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "heading 2",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "heading 3",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "heading 4",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "heading 5",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "heading 6",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Heading 1",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 2`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Heading 2",
          },
        ],
        "object": "block",
        "type": "heading-two",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 3`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Heading 3",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 4`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Heading 4",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 5`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Heading 5",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing any heading should result in heading-two except heading-three 6`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "Heading 6",
          },
        ],
        "object": "block",
        "type": "heading-three",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing bullet list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 1",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 2",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 3",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "bulleted-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing details box with summary element 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Summary text",
              },
            ],
            "object": "block",
            "type": "summary",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Details text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "details",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing list with paragraph inside li elements 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "paragraph 1",
                  },
                ],
                "object": "block",
                "type": "list-text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "paragraph 2",
                  },
                ],
                "object": "block",
                "type": "list-text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "bold paragraph 3",
                  },
                ],
                "object": "block",
                "type": "list-text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "bulleted-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing numbered list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 1",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 2",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Rad 3",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "numbered-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing solution box with summary element 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Summary text",
              },
            ],
            "object": "block",
            "type": "summary",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Solution text",
              },
            ],
            "object": "block",
            "type": "paragraph",
          },
        ],
        "object": "block",
        "type": "solutionbox",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserializing table 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "isHeader": false,
        },
        "nodes": Array [
          Object {
            "data": Object {
              "isHeader": false,
            },
            "nodes": Array [
              Object {
                "data": Object {
                  "isHeader": true,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "column 1",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
              Object {
                "data": Object {
                  "isHeader": true,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "column 2",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
            ],
            "object": "block",
            "type": "table-row",
          },
          Object {
            "data": Object {
              "isHeader": false,
            },
            "nodes": Array [
              Object {
                "data": Object {
                  "isHeader": false,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "column 1",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
              Object {
                "data": Object {
                  "isHeader": false,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "column 2",
                  },
                ],
                "object": "block",
                "type": "table-cell",
              },
            ],
            "object": "block",
            "type": "table-row",
          },
        ],
        "object": "block",
        "type": "table",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`searlizing solution box with summary element 1`] = `"<details class=\\"c-details--solution-box\\"><summary>Summary text</summary><p>Details text</p></details>"`;

exports[`serialize bodybox block 1`] = `
<div
  className="c-bodybox"
>
  <p>
    test
  </p>
</div>
`;

exports[`serialize embed block 1`] = `
<embed
  data-caption="test"
/>
`;

exports[`serialize footnote 1`] = `
<embed
  data-authors="Jony Ive"
  data-edition="4"
  data-publisher="Apple"
  data-title="Apple Watch"
  data-type="product"
  data-year="2015"
/>
`;

exports[`serializing a normal div block 1`] = `"<div><p>A paragraph</p></div>"`;

exports[`serializing a span with attributes 1`] = `"<p><span lang=\\"en\\">Hyper Text Markup Language</span></p>"`;

exports[`serializing br 1`] = `"<br/>"`;

exports[`serializing bullet list 1`] = `"<ul><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ul>"`;

exports[`serializing details box with summary element 1`] = `"<details><summary>Summary text</summary>Details text</details>"`;

exports[`serializing heading-two 1`] = `"<h2>heading 2</h2>"`;

exports[`serializing letter list 1`] = `"<ol data-type=\\"letters\\"><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ol>"`;

exports[`serializing numbered list 1`] = `"<ol><li>Rad 1</li><li>Rad 2</li><li>Rad 3</li></ol>"`;

exports[`serializing quote 1`] = `"<blockquote>This quote should be both smart and wise</blockquote>"`;

exports[`serializing section 1`] = `"<section><p>Paragraph text</p></section>"`;
